--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,28 @@
 plugins {
-    id 'java'
+	id 'org.springframework.boot' version '2.3.3.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+	id 'java'
 }
 
-group 'com.beneluwux'
-version '1.0-SNAPSHOT'
+group = 'com.beneluwux'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
 dependencies {
-    implementation 'org.javacord:javacord:3.0.6'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	runtimeOnly 'mysql:mysql-connector-java'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.javacord:javacord:3.0.6'
 }
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'com.beneluwux.Main'
-        )
-    }
-
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-
-}
-
-task fatJar(type: Jar) {
-    manifest.from jar.manifest
-
-    from {
-        configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
-    } {
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
-    with jar
-}
-
-artifacts {
-    archives fatJar
+test {
+	useJUnitPlatform()
 }
