--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,13 +1,13 @@
+spring.jpa.hibernate.ddl-auto=update
+logging.level.root=info
+
 # Name of the bot
 name = Dirk
 
 # Discord related settings
 #############################
-# Discord production api key
-discord.prod.api =
-
 # Discord development api key
-discord.dev.api =
+discord.api.key =
 
 # If the bot is in production state
 discord.production = false
