--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ dependencies {
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.javacord:javacord:3.1.1'
+
+	compileOnly 'org.projectlombok:lombok:1.18.16'
+	annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.16'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
 
 test {
