feat(gitignore): add -prod.properties to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,6 @@ out/
 .vscode/
 
 src/main/resources/application.properties
+src/main/resources/application-prod.properties
 src/main/resources/credentials.json
 tokens/**
